compiler/tools/fpp-check/test/state_machine/redef/state_enum.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/state_enum.fpp:8.3
  type State = U32
  ^
error: redefinition of symbol State
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/redef/state_enum.fpp:1.1
state machine SM {
^
